--- a/WebDriver/composer.json
+++ b/WebDriver/composer.json
@@ -1,9 +1,9 @@
 {
     "require": {
         "monolog/monolog": "1.0.*",
-        "facebook/webdriver": "^1.6"
+        "facebook/webdriver": "^1.6",
+        "phpunit/phpunit": "^7.3"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.3"
     }
 }
